从MulitUploadFrom页面中抽象出使用MulitUpload组件页面可以通用的方法，到 接口IMulitUpload中
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2996 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/mulitupload/AForm.html
+++ b/src/main/webapp/mulitupload/AForm.html
@@ -4,13 +4,17 @@
       <table>
         <tr>
           <td>
-            <span key="name">name</span>
+            <span key="name" jwcid="nameField">name</span>
           </td>
-
-		  <td>
+	      <td>
+            <span key="name" jwcid="cnNameField">cnName</span>
+          </td>
+        </tr>
+		<tr>
+		  <td colspan="2">
 			 <input type="file" name="uploadfile" id="uploadfile" jwcid="updateField"/>
 		  </td>
-        </tr>
+		</tr>
       </table>
 		<table width="200" jwcid="@contrib:TableView" columns="!checkbox,name,!file" element="table" 
 			persist="client" source="ognl:getSource('tms')" pageSize="5" border="1" align="center">
