增加了Submit组件
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3121 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/mulitupload/AForm.html
+++ b/src/main/webapp/mulitupload/AForm.html
@@ -34,6 +34,6 @@
 		  	<td colspan="6" align="center"><div jwcid="@contrib:TablePages" /></td>
 		  </tr>
 		</table><br/><br/>
-      <input jwcid="@Submit" type="Submit" value="message:button.Okay"/>
+        <img src="./jscripts/images/add.png" jwcid="test@corner:Submit" type="Submit" value="message:button.Okay"/>
     </form>
 </span>
