autocompleter增加传递多字段功能，可以使用模板管理格式
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3128 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -20,6 +20,8 @@
 		<hr/>
 			GainPoint
 		<a jwcid="@PageLink" page="gainPoint/AList"><span key="GainPoint" /></a><br>
-			
+		<hr/>
+			Prototype
+		<a jwcid="@PageLink" page="prototype/AList"><span key="Prototype" /></a><br>
     </body>
 </html>
