多组建模板更新测试，成功
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3129 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/prototype/BForm.html
+++ b/src/main/webapp/prototype/BForm.html
@@ -8,7 +8,8 @@
           </td>
           <td>
             <input jwcid="nameField"/><br/>
-			cnName:<textarea jwcid="cnNameField" cols="50" rows="5"></textarea>
+			cnName:<textarea jwcid="cnNameField" cols="50" rows="5"></textarea><br/>
+			cncnName:<textarea jwcid="cncnNameField" cols="50" rows="5"></textarea>
           </td>
         </tr>
       </table>
