--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -2,6 +2,7 @@
 <head><title>Home Page</title></head>
 	<body>
 		<a jwcid="@PageLink" page="one/AList"><span key="one" /></a><br>
+		<a jwcid="@PageLink" page="one/AEventListenerList"><span key="eventListener" /></a><br>
 		<a jwcid="@PageLink" page="one2many/AList"><span key="one2many" /></a><br>
         <a jwcid="@PageLink" page="many2many/AList"><span key="many2many-user" /></a><br>
 		<a jwcid="@PageLink" page="many2many/BList"><span key="many2many-catalog" /></a><br>
