增加jasperEntityLink/Service,增加DatabaseAssetFactory但功能未写
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3393 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one/AEventListenerForm.html
+++ b/src/main/webapp/one/AEventListenerForm.html
@@ -19,11 +19,9 @@
   </form>
 <SCRIPT LANGUAGE="JavaScript">
 <!--
-	
-	var triggerable= function(obj){
-		dojo.debug("fdsakfjdsk");
+	function onchange(){
+		return {"theAnswer":42};
 	}
-	
 //-->
 </SCRIPT>
 	
