--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -12,7 +12,7 @@
 		<hr>
 		<a jwcid="@PageLink" page="validator/FieldMinForm"><span key="FieldMin" /></a><br>
 		<a jwcid="@PageLink" page="validator/FieldPlusEqForm"><span key="FieldPlusEqForm" /></a><br>
-		<a jwcid="@PageLink" page="upload/APersonForm"><span key="uploadBox" /></a><br>
+		<a jwcid="@PageLink" page="upload/APersonList"><span key="uploadBox" /></a><br>
 			
 		<hr/>
 			Widget
