--- a/src/main/webapp/upload/APersonForm.html
+++ b/src/main/webapp/upload/APersonForm.html
@@ -7,7 +7,7 @@
             <span key="name">name</span>
           </td>
           <td>
-            <input jwcid="nameField" /><input jwcid="passwordField"/>colors:<input jwcid="colorsField"/>
+            <input jwcid="nameField" /><input jwcid="passwordField"/>
           </td>
 		</tr>
 		<tr>
