搞定关于EventListener传值的问题
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3399 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one/AEventListenerForm.html
+++ b/src/main/webapp/one/AEventListenerForm.html
@@ -14,14 +14,19 @@
       <input jwcid="@Submit" type="Submit" value="message:button.Okay"/>
       <input jwcid="@Any" type="Button" value="message:button.Cancle" onClick="javascript:tapestry.form.cancel(this.form);"/>
     </form>
-  <form name="SheetCateForm" jwcid="SheetCateForm@Form">
-  	<input type="hidden" jwcid="sheetCateHidden@Hidden"  id="sheetCateHidden" value="ognl:sheetCateType" onchange="{'theAnswer':42}"/>
-  </form>
+  
 <SCRIPT LANGUAGE="JavaScript">
 <!--
-	function onchange(){
-		return {"theAnswer":42};
+	testId=new Object();
+	SheetCateField.trigger=function(data){
+		alert(data);
+		return true;
 	}
+	dojo.event.connect(dojo.byId("SheetCateField"),"onchange",function(){
+		alert("okay");
+		data={"theAnswer":42}
+		dojo.byId("SheetCateField").trigger(data);
+	});
 //-->
 </SCRIPT>
 	
