--- a/src/main/webapp/upload/APersonList.html
+++ b/src/main/webapp/upload/APersonList.html
@@ -43,7 +43,7 @@
             <span jwcid="@Insert" value="ognl:entity.colors">colors</span>
           </td>
 		  <td>
-            <a jwcid="@corner:JasperEntityLink" downloadFileName="文件名" taskType="pdf" templateEntity="ognl:entity" >pdf</a>
+            <a jwcid="@corner:JasperEntityLink" downloadFileName="文件名" taskType="pdf" templateEntity="ognl:entity" detailCollection="collectionTest" detailEntity="atest" >pdf</a>
           </td>
           <td>
             <a parameters="ognl:entity" listener="listener:doEditEntityAction" jwcid="@DirectLink" href="AForm.html" id="editAction">
