增加打印service，测试打印成功
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3437 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/upload/APersonList.html
+++ b/src/main/webapp/upload/APersonList.html
@@ -44,6 +44,8 @@
           </td>
 		  <td>
             <a jwcid="@corner:JasperEntityLink" downloadFileName="文件名" taskType="pdf" templateEntity="ognl:entity" detailCollection="collectionTest" detailEntity="atest" >pdf</a>
+			  &nbsp;
+			<a jwcid="@corner:JasperPrinterLink" templateEntity="ognl:entity" detailCollection="collectionTest" detailEntity="atest" >print</a>
           </td>
           <td>
             <a parameters="ognl:entity" listener="listener:doEditEntityAction" jwcid="@DirectLink" href="AForm.html" id="editAction">
