增加unzip流操作
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3442 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/upload/APersonList.html
+++ b/src/main/webapp/upload/APersonList.html
@@ -14,6 +14,9 @@
     <div jwcid="@contrib:TableView" columns="shortName" element="div" source="ognl:source" persist="client">
       <table>
         <tr>
+		  <td>
+            <span key="id">id</span>
+          </td>
           <td>
             <span key="name">name</span>
           </td>
@@ -34,6 +37,9 @@
           </td>
         </tr>
         <tr row="ognl:entity" jwcid="@contrib:TableRows" element="tr">
+		  <td>
+            <span jwcid="@Insert" value="ognl:entity.id">id</span>
+          </td>
           <td>
             <span jwcid="@Insert" value="ognl:entity.name">name</span>
           </td>
