--- a/src/main/webapp/gainPoint/gainPointForm.html
+++ b/src/main/webapp/gainPoint/gainPointForm.html
@@ -6,7 +6,7 @@
 		 
 		<tr jwcid="GainPointField">
 			<td>
-				id <input type="hidden" id="id" name ="id" value=""	/>
+				id <input type="hidden" id="pid" name ="poid" value=""	/>
 			</td>
 			<td>
 				name <input type="text" id="field1" name ="name"	/>
