--- a/src/test/resources/corner/gain/test_gainPoint.html
+++ b/src/test/resources/corner/gain/test_gainPoint.html
@@ -70,52 +70,10 @@ function reElementValues(){
 				id<input type="hidden" id="id" name ="id" value="fjkdsajfldsu4o329048347832012j4kl48"	/>
 			</td>
 			<td>
-				field 1 <input id="field1" name="name"/>
+				field 1 <input id="field1" name="name" value="aaaaa" />
 			</td>
 			<td>
-				field 2 <input id="field1" name="cnName"/>
-			</td>
-			<td>
-				<input id="testAdd" value="删除" onclick="dellRow('t',getTrIndex(this))" type="button">
-			</td>							
-		</tr>
-		<tr jwcid="GainPointIdField">
-			<td>
-				id<input type="hidden" id="id" name ="id" value=""	/>
-			</td>
-			<td>
-				field 1 <input id="field1" name="name"/>
-			</td>
-			<td>
-				field 2 <input id="field1" name="cnName"/>
-			</td>
-			<td>
-				<input id="testAdd" value="删除" onclick="dellRow('t',getTrIndex(this))" type="button">
-			</td>							
-		</tr>
-		<tr jwcid="GainPointIdField">
-			<td>
-				id<input type="hidden" id="id" name ="id" value=""	/>
-			</td>
-			<td>
-				field 1 <input id="field1" name="name"/>
-			</td>
-			<td>
-				field 2 <input id="field1" name="cnName"/>
-			</td>
-			<td>
-				<input id="testAdd" value="删除" onclick="dellRow('t',getTrIndex(this))" type="button">
-			</td>							
-		</tr>
-		<tr jwcid="GainPointIdField">
-			<td>
-				id<input type="hidden" id="id" name ="id" value=""	/>
-			</td>
-			<td>
-				field 1 <input id="field1" name="name"/>
-			</td>
-			<td>
-				field 2 <input id="field1" name="cnName"/>
+				field 2 <input id="field1" name="cnName" value="bbbbbb" />
 			</td>
 			<td>
 				<input id="testAdd" value="删除" onclick="dellRow('t',getTrIndex(this))" type="button">
