--- a/src/test/resources/corner/window/multi_modal.html
+++ b/src/test/resources/corner/window/multi_modal.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>Untitled Document</title>
 <script>
-  var cssPath ="../themes/"
+  var cssPath ="../../../../main/js/corner/prototype/window/themes/"
 </script>
 <link href="../../../../main/js/corner/prototype/window/themes/default.css" rel="stylesheet" type="text/css" >	 </link> 
 <link href="../../../../main/js/corner/prototype/window/themes/alphacube.css" rel="stylesheet" type="text/css" >	 </link>
