增加windowDialog可以使用配置弹出页面
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3516 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/widget/QueryDialogTest.html
+++ b/src/main/webapp/widget/QueryDialogTest.html
@@ -36,7 +36,7 @@
 	<title>Sample Windows</title>
 </head>
 <form jwcid="AForm">
-	<input jwcid="winDialog" />
+	<span jwcid="winDialog" />
 	
 	<a herf="#" onclick="winwinDialog.show();">fjksdjf</a>
 	<br/>
