增加windowDialog静态测试
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3520 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/window/test_window.html
+++ b/src/test/resources/corner/window/test_window.html
@@ -48,7 +48,7 @@
 	showDebug();
 
 
-	winwinDialog = new Window({"className":"alphacube","title":"google","url":"http://www.google.com/"});
+	winwinDialog = new Window({"className":"alphacube","title":"google","url":"haha.html"});
 	winwinDialog.show()
 	
 	function openDialog() {
