--- a/src/test/resources/corner/window/haha.html
+++ b/src/test/resources/corner/window/haha.html
@@ -28,9 +28,10 @@ djConfig = { isDebug: true,
 			list:<br/>
 	<table>
 		<tr>
-			<td>	<input type="radio" id="testRadio" jwcid="testRadio@corner:WinSelectedField" label="label" asdf="asdf" fdsa="fdsa" />r1</td><td bgcolor="red">222222</td>
+			<td>	<input type="radio"  name='r1' id='r1' jwcid="testRadio@corner:WinSelectedField" label="label" asdf="asdf" fdsa="fdsa" />r1</td><td bgcolor="red">222222</td>
 		</tr>
 	</table>
+			
 <script>
 <!--
 
@@ -38,9 +39,9 @@ djConfig = { isDebug: true,
 winSelectRecord=function(evt){
 	var src=dojo.html.getEventTarget(evt);
 	parent.selectRecord(src);
-	parent.pwin_winDialog.close();
+	queryBox.close();
 }
-dojo.event.connect(dojo.byId("testRadio"),"onclick","winSelectRecord");
+dojo.event.connect(dojo.byId("r1"),"onclick","winSelectRecord");
 
 //-->
 </script>
