解决windowDialog上来就加载问题
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3522 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/window/haha.html
+++ b/src/test/resources/corner/window/haha.html
@@ -34,7 +34,7 @@ djConfig = { isDebug: true,
 			
 <script>
 <!--
-
+alert("fdsjkafjds");
 
 winSelectRecord=function(evt){
 	var src=dojo.html.getEventTarget(evt);
