--- a/src/test/resources/corner/window/test_win.html
+++ b/src/test/resources/corner/window/test_win.html
@@ -32,7 +32,6 @@ dojo.require("tapestry.namespace")
 	<script type="text/javascript" src="../../../../main/js/corner/prototype/window/javascripts/effects.js"> </script>
 	<script type="text/javascript" src="../../../../main/js/corner/prototype/window/javascripts/window.js"> </script>
 	<script type="text/javascript" src="../../../../main/js/corner/prototype/window/javascripts/window_effects.js"> </script>
-	<script type="text/javascript" src="../../../../main/js/corner/prototype/window/javascripts/debug.js"> </script>
 	<link href="../../../../main/js/corner/prototype/window/themes/default.css" rel="stylesheet" type="text/css" >	 </link>
 	<link href="../../../../main/js/corner/prototype/window/themes/theme1.css" rel="stylesheet" type="text/css" >	 </link>
 	<link href="../../../../main/js/corner/prototype/window/themes/mac_os_x.css" rel="stylesheet" type="text/css" >	 </link>
@@ -52,7 +51,7 @@ dojo.require("tapestry.namespace")
 <input type="hidden" name="submitmode" value="" />
 <input type="hidden" name="submitname" value="" />
 </div>
-	<span id="winDialog"><img name="pwin_winDialog_button" id="pwin_winDialog_button" src="../../../../main/js/corner/widget/templates/dic.gif" border="0" onclick="pwin_winDialog.showCenter();" /></span>
+	<span id="winDialog"><img name="pwin_winDialog_button" id="pwin_winDialog_button" src="../../../../main/js/corner/widget/templates/dic.gif" border="0" onclick="ddd();" /></span>
 	
 
 	<br/>
@@ -65,10 +64,6 @@ dojo.require("tapestry.namespace")
 
 function selectRecord(obj){
 			dojo.byId('test').value=obj.getAttribute("label");
-}
-	
-	function winSelectRecord(){
-	
 }
 
 //-->
@@ -89,6 +84,12 @@ test1=function(){
 	}
 
 }
+var pwin_winDialog;
+function ddd(){
+
+								   
+if(!pwin_winDialog){
+					   								   
 pwin_winDialog = new Window('pwin_winDialog',{"id":"generated","className":"alphacube","title":"google",
 								   "url":"haha.html","top ":"top:0","right":"left:0","width":"500","height":"300",
 								   "maxWidth":"none","maxHeight":"none","minWidth ":"500","minHeight":"300",
@@ -96,6 +97,9 @@ pwin_winDialog = new Window('pwin_winDialog',{"id":"generated","className":"alph
 								   "draggable":"true","showEffectOptions":"none","hideEffectOptions":"none","effectOptions":"none",
 								   "opacity":1,"recenterAuto":"true","gridX":1,"gridY":1,"wiredDrag":"false",
 								   "destroyOnClose":"false","onload":test1,"all callbacks":"none"});
+}								   
+pwin_winDialog.showCenter();
+}
 //	pwin_winDialog.setCloseCallback(selectRecord);
 
 // --></script></body>
