WindowQueryDialog增加选择回填功能
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3525 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/widget/WinSelectionListPage.html
+++ b/src/main/webapp/widget/WinSelectionListPage.html
@@ -8,18 +8,7 @@
 			list:<br/>
 	<table>
 		<tr>
-			<td>	<input type="radio" label="label" asdf="asdf" fdsa="fdsa" />r1</td><td bgcolor="red">111111111</td>
+			<td>	<input type="radio" label="label" jwcid="testRadio@corner:WinSelectedField" asdf="asdf" fdsa="fdsa" />r1</td><td bgcolor="red">111111111</td>
 		</tr>
 	</table>
-<script>
-<!--
-
-
-function winSelectRecord(){
-	alert("fkdlsjaf");
-}
-
-//-->
-</script>
-
 </span>
