--- a/src/main/webapp/widget/WinSelectionListPage.html
+++ b/src/main/webapp/widget/WinSelectionListPage.html
@@ -9,6 +9,7 @@
 	<table>
 		<tr>
 			<td>	<input type="radio" label="label" jwcid="testRadio@corner:WinSelectedField" asdf="asdf" fdsa="fdsa" />r1</td><td bgcolor="red">111111111</td>
+			<td>	<input type="radio" label="^_^" jwcid="testRadio2@corner:WinSelectedField" asdf="asdf" fdsa="fdsa" />r1</td><td bgcolor="red">2222222</td>
 		</tr>
 	</table>
 </span>
