增加默认值
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3527 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/widget/WinSelectionListPage.html
+++ b/src/main/webapp/widget/WinSelectionListPage.html
@@ -8,8 +8,8 @@
 			list:<br/>
 	<table>
 		<tr>
-			<td>	<input type="radio" label="label" jwcid="testRadio@corner:WinSelectedField" asdf="asdf" fdsa="fdsa" />r1</td><td bgcolor="red">111111111</td>
-			<td>	<input type="radio" label="^_^" jwcid="testRadio2@corner:WinSelectedField" asdf="asdf" fdsa="fdsa" />r1</td><td bgcolor="red">2222222</td>
+			<td>	<input type="radio" label="label" jwcid="@corner:WinSelectedField" asdf="asdf" fdsa="fdsa" />r1</td><td bgcolor="red">111111111</td>
+			<td>	<input type="radio" label="^_^" jwcid="@corner:WinSelectedField" asdf="asdf" fdsa="fdsa" />r1</td><td bgcolor="red">2222222</td>
 		</tr>
 	</table>
 </span>
