增加动态判断浏览器大小设置弹出页面大小功能
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3542 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/widget/QueryDialogTest.html
+++ b/src/main/webapp/widget/QueryDialogTest.html
@@ -1,16 +1,14 @@
 <span jwcid="@DemoBorder">
 <form jwcid="AForm">
+	<span jwcid="dialog1" />
+	<span jwcid="dialog2" />
 	<span jwcid="winDialog" />
-	
-
 	<br/>
 	<input id="test"/>
 	<input type="submit"/>
 </form>	
 <script>
 <!--
-
-
 function selectRecord(obj){
 			dojo.byId('test').value=obj.getAttribute("label");
 }
