--- a/src/main/webapp/gainPoint/AForm.html
+++ b/src/main/webapp/gainPoint/AForm.html
@@ -1,4 +1,9 @@
 <span jwcid="@DemoBorder">
+	<SCRIPT LANGUAGE="JavaScript">
+<!--
+var flags = eval({"entity":{"id":"test01","name":"中国aaa"}});
+	//-->
+</SCRIPT>
     <a listener="listener:doCancelEntityAction" jwcid="@DirectLink" href="AList.html">Return A List</a>
     <form jwcid="AForm" action="AList.html">
       <table>
@@ -7,7 +12,7 @@
             <span key="name">name</span>
           </td>
           <td>
-            <input jwcid="nameField" />
+            <input jwcid="nameField" /><span jwcid="nameVInsertField">aaaaaaaaaaaaaaaa</span>
           </td>
         </tr>
       </table>
