--- a/src/main/webapp/gainPoint/AForm.html
+++ b/src/main/webapp/gainPoint/AForm.html
@@ -1,10 +1,6 @@
 <span jwcid="@DemoBorder">
-	<SCRIPT LANGUAGE="JavaScript">
-<!--
-var flags = eval({"entity":{"id":"test01","name":"中国aaa"}});
-	//-->
-</SCRIPT>
     <a listener="listener:doCancelEntityAction" jwcid="@DirectLink" href="AList.html">Return A List</a>
+	<span jwcid="@corner:VManage"></span>
     <form jwcid="AForm" action="AList.html">
       <table>
         <tr>
