增加版本展示页面
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3593 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/gainPoint/AList.html
+++ b/src/main/webapp/gainPoint/AList.html
@@ -16,6 +16,9 @@
           <td>
             <span key="link.delete">delete</span>
           </td>
+		  <td>
+            <span key="History">History</span>
+          </td>
         </tr>
         <tr row="ognl:entity" jwcid="@contrib:TableRows" element="tr">
           <td>
@@ -29,6 +32,11 @@
           <td>
             <a parameters="ognl:entity" listener="listener:doDeleteEntityAction" jwcid="@DirectLink" href="#">
               <span key="link.delete">Delete</span>
+            </a>
+          </td>
+		  <td>
+            <a parameters="ognl:entity" listener="listener:doVersionPage" jwcid="@DirectLink" href="#">
+              <span key="History">History</span>
             </a>
           </td>
         </tr>
