--- a/src/main/webapp/gainPoint/AVersionList.html
+++ b/src/main/webapp/gainPoint/AVersionList.html
@@ -19,7 +19,9 @@
         </tr>
         <tr jwcid="@For" source="ognl:versionInfo" value="ognl:entity" element="tr">
           <td>
-            <span jwcid="@Insert" value="ognl:entity.versionNum">versionNum</span>
+			<a parameters="ognl:entity" listener="listener:doDifferencePage" jwcid="@DirectLink" href="#">
+              <span jwcid="@Insert" value="ognl:entity.versionNum">versionNum</span>
+            </a>
           </td>
 		  <td>
             <span jwcid="@Insert" value="ognl:entity.author">author</span>
