--- a/src/main/webapp/gainPoint/AVersionForm.html
+++ b/src/main/webapp/gainPoint/AVersionForm.html
@@ -1,5 +1,5 @@
 <span jwcid="@DemoBorder">
-    <a listener="listener:doCancelEntityAction" jwcid="@DirectLink" href="AList.html">Return A List</a>
+    <a jwcid="@PageLink" page="gainPoint/AList">Return A List</a>
 	<span jwcid="@corner:VManage"></span>
       <table>
 		<tr>
