增加弹出显示不同功能
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3597 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/gainPoint/AVersionForm.html
+++ b/src/main/webapp/gainPoint/AVersionForm.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" type="text/css" media="all" href="../css/prototip1.1.0/css/prototip.css" title="Aqua" />
+<SCRIPT LANGUAGE="JavaScript" src="../css/prototip1.1.0/js/prototip.js"></script>
 <span jwcid="@DemoBorder">
     <a jwcid="@PageLink" page="gainPoint/AList">Return A List</a>
 	<span jwcid="@corner:VManage"></span>
