--- a/src/main/webapp/widget/QueryDialogTest.html
+++ b/src/main/webapp/widget/QueryDialogTest.html
@@ -1,8 +1,7 @@
 <span jwcid="@DemoBorder">
 <form jwcid="AForm">
-	<span jwcid="dialog1" />
-	<span jwcid="dialog2" />
-	<span jwcid="winDialog" />
+
+	<span jwcid="popText" />
 	<br/>
 	<input id="test"/>
 	<input type="submit"/>
@@ -10,7 +9,7 @@
 <script>
 <!--
 function selectRecord(obj){
-			dojo.byId('test').value=obj.getAttribute("label");
+			dojo.byId('test').value=obj.value;
 }
 //-->
 </script>
