--- a/src/test/resources/corner/window/pop.html
+++ b/src/test/resources/corner/window/pop.html
@@ -19,9 +19,8 @@ djConfig = { isDebug: true,
 </HEAD>
 <body>
 <span jwcid="@DemoBorder">
-<br/>
 	<textarea id='t1' cols='55%' rows='10'></textarea>
-			
+	<input type="button" class="alertButton" onClick="queryBox.close();" value="Close"/>
 <script>
 <!--
 
