可以设置处理弹出win窗口事件的ID
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3627 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/widget/QueryDialogTest.html
+++ b/src/main/webapp/widget/QueryDialogTest.html
@@ -1,6 +1,8 @@
 <span jwcid="@DemoBorder">
 <form jwcid="AForm">
 
+	<a id="touch">touch me</a>
+	
 	<span jwcid="popText" />
 	<br/>
 	<input id="test"/>
