svn统一增加组建完成
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3634 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/widget/QueryDialogTest.html
+++ b/src/main/webapp/widget/QueryDialogTest.html
@@ -1,6 +1,8 @@
 <span jwcid="@DemoBorder">
 <form jwcid="AForm">
 
+	
+	<span jwcid="winDialog"></span>
 	<a id="touch">touch me</a>
 	
 	<span jwcid="popText" />
