增加背景色的改变
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3658 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/svn/testSvn.html
+++ b/src/test/resources/corner/svn/testSvn.html
@@ -44,8 +44,8 @@ djConfig = { isDebug: true
 <SCRIPT LANGUAGE="JavaScript">
 <!--
 var flags = eval({"entity":{"id":"test01","name":"中国111"}});
-var flags2 = eval({"entity":{"id":"test01","name":"中国222"}});
-var type ="show";
+var flags2 = eval({"entity":{"id":"test01"}});
+var type ="show1";
 	
 dojo.event.connect(window,"onload",this,"add");
 add=function(evt){
