还原回原先测试
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3660 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/window/test_win.html
+++ b/src/test/resources/corner/window/test_win.html
@@ -98,6 +98,7 @@ function ddd(){
 								   "opacity":1,"recenterAuto":"true","gridX":1,"gridY":1,"wiredDrag":"false",
 								   "destroyOnClose":"false","onload":test1,"all callbacks":"none"});
 }								   
+pwin_winDialog.setSize(document.body.clientWidth * 0.75,document.body.clientHeight * 0.75);
 pwin_winDialog.showCenter();
 }
 //	pwin_winDialog.setCloseCallback(selectRecord);
