--- a/src/test/resources/corner/window/testCheckBoxPop.html
+++ b/src/test/resources/corner/window/testCheckBoxPop.html
@@ -17,42 +17,35 @@ djConfig = { isDebug: true,
 </SCRIPT>
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/dojo/dojo.js"></script>
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/tapestry/core.js"></script>
+<SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/corner/corner.js"></script>
+<script type="text/javascript" src="../../../../main/js/corner/prototype/window/javascripts/prototype.js"> </script> 
+<script type="text/javascript" src="../../../../main/js/corner/prototype/window/javascripts/effects.js"> </script>
+<script type="text/javascript" src="../../../../main/js/corner/prototype/window/javascripts/window.js"> </script>
+<script type="text/javascript" src="../../../../main/js/corner/prototype/window/javascripts/window_effects.js"> </script>
+<script type="text/javascript" src="../../../../main/java/corner/orm/tapestry/component/prototype/window/WindowQueryDialog.js"> </script>
+<link href="../../../../main/js/corner/prototype/window/themes/default.css" rel="stylesheet" type="text/css" >	 </link>
+<link href="../../../../main/js/corner/prototype/window/themes/theme1.css" rel="stylesheet" type="text/css" >	 </link>
+<link href="../../../../main/js/corner/prototype/window/themes/mac_os_x.css" rel="stylesheet" type="text/css" >	 </link>
+<link href="../../../../main/js/corner/prototype/window/themes/alphacube.css" rel="stylesheet" type="text/css" >	 </link>
+<link href="../../../../main/js/corner/prototype/window/themes/darkX.css" rel="stylesheet" type="text/css" >	 </link>
+<link href="../../../../main/js/corner/prototype/window/themes/spread.css" rel="stylesheet" type="text/css" >	 </link>
+<link href="../../../../main/js/corner/prototype/window/themes/alert.css" rel="stylesheet" type="text/css" >	 </link>
+<link href="../../../../main/js/corner/prototype/window/themes/alert_lite.css" rel="stylesheet" type="text/css" >	 </link>
 <script type="text/javascript">
 dojo.require("dojo.logging.Logger");
 dojo.log.setLevel(dojo.log.getLevel("WARNING"));
 dojo.require("tapestry.namespace")
 </script>
 	
-<SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/corner/corner.js"></script>
-
 </HEAD>
 
 <body bottommargin="0" rightmargin="0" topmargin="0" leftmargin="0" id="Body">
-<script type="text/javascript" src="../../../../main/js/corner/prototype/window/javascripts/prototype.js"> </script> 
-	<script type="text/javascript" src="../../../../main/js/corner/prototype/window/javascripts/effects.js"> </script>
-	<script type="text/javascript" src="../../../../main/js/corner/prototype/window/javascripts/window.js"> </script>
-	<script type="text/javascript" src="../../../../main/js/corner/prototype/window/javascripts/window_effects.js"> </script>
-	<link href="../../../../main/js/corner/prototype/window/themes/default.css" rel="stylesheet" type="text/css" >	 </link>
-	<link href="../../../../main/js/corner/prototype/window/themes/theme1.css" rel="stylesheet" type="text/css" >	 </link>
-	<link href="../../../../main/js/corner/prototype/window/themes/mac_os_x.css" rel="stylesheet" type="text/css" >	 </link>
-	<link href="../../../../main/js/corner/prototype/window/themes/alphacube.css" rel="stylesheet" type="text/css" >	 </link>
-	<link href="../../../../main/js/corner/prototype/window/themes/darkX.css" rel="stylesheet" type="text/css" >	 </link>
-	<link href="../../../../main/js/corner/prototype/window/themes/spread.css" rel="stylesheet" type="text/css" >	 </link>
-	<link href="../../../../main/js/corner/prototype/window/themes/alert.css" rel="stylesheet" type="text/css" >	 </link>
-	<link href="../../../../main/js/corner/prototype/window/themes/alert_lite.css" rel="stylesheet" type="text/css" >	 </link>
-
 
 
 	
 
 <form method="post" action="/widget/QueryDialogTest,AForm.direct" id="AForm">
-
-<div style="display:none;" id="AFormhidden"><input type="hidden" name="formids" value="" />
-<input type="hidden" name="submitmode" value="" />
-<input type="hidden" name="submitname" value="" />
-</div>
 	<span id="winDialog"><input type="checkbox" name="pwin_winDialog_button" id="pwin_winDialog_button"/></span>
-	
   <br/>
 	<input id="test"/>
 	<input type="submit"/>
@@ -68,57 +61,16 @@ function selectRecord(obj){
 //-->
 </script>
 
-<!--
-<div jwcid="@contrib:InspectorButton"/>
--->
-
-<br/>
-<span>Version:0.0.1  $Revision: 2023 $ $Date: 2006-07-22 13:23:08Z $ </span>
 <script type="text/javascript"><!--
 
-function check(){ 
-	if (dojo.byId("pwin_winDialog_button").checked)
-		return true;
-	else
-		return false;
-}
-
-test1=function(){
-		dojo.debug("frame on load!");
-		frameW=dojo.html.iframeContentWindow(pwin_winDialog.getContent());
-		if(frameW){
-			frameW.queryBox=pwin_winDialog;
-	}
-
-}
-var pwin_winDialog = initpwin_winDialog();
-									   
-function initpwin_winDialog(){
-	if(!pwin_winDialog){									   
-	   pwin_winDialog = new Window('pwin_winDialog',{"id":"generated","className":"alphacube","title":"google",
+ myWindow("pwin_winDialog_button",{"id":"generated","className":"alphacube","title":"google",
 									   "url":"pop.html","top ":"top:0","right":"left:0","width":"500","height":"300",
 									   "maxWidth":"none","maxHeight":"none","minWidth ":"500","minHeight":"300",
 									   "resizable":"true","closable":"true","minimizable":"true","maximizable":"true",
 									   "draggable":"true","showEffectOptions":"none","hideEffectOptions":"none","effectOptions":"none",
 									   "opacity":1,"recenterAuto":"true","gridX":1,"gridY":1,"wiredDrag":"false",
-									   "destroyOnClose":"false","onload":test1,"all callbacks":"none"});
-	}
-	return pwin_winDialog;
-}
+									   "destroyOnClose":"false","all callbacks":"none"});
 
-chk = function(evt){
-	if(check()){
-		pwin_winDialog.showCenter();
-	}else{
-		pwin_winDialog.close();
-	}
-}
-
-ddd = function(evt){
-		pwin_winDialog.showCenter();
-}
-
-dojo.event.connect(dojo.byId("pwin_winDialog_button"),"onclick",this,"chk");
 
 // --></script></body>
 </html>
