修改windowDialog组件使用js文件
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3679 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/window/testCheckBoxPop.html
+++ b/src/test/resources/corner/window/testCheckBoxPop.html
@@ -63,7 +63,7 @@ function selectRecord(obj){
 
 <script type="text/javascript"><!--
 
- myWindow("pwin_winDialog_button",{"id":"generated","className":"alphacube","title":"google",
+ windowQueryDialogAction("pwin_winDialog_button",{"id":"generated","className":"alphacube","title":"google",
 									   "url":"pop.html","top ":"top:0","right":"left:0","width":"500","height":"300",
 									   "maxWidth":"none","maxHeight":"none","minWidth ":"500","minHeight":"300",
 									   "resizable":"true","closable":"true","minimizable":"true","maximizable":"true",
