--- a/src/test/resources/corner/window/testCheckBoxPop.html
+++ b/src/test/resources/corner/window/testCheckBoxPop.html
@@ -48,6 +48,9 @@ dojo.require("tapestry.namespace")
 	<span id="winDialog"><input type="checkbox" name="pwin_winDialog_button" id="pwin_winDialog_button"/></span>
   <br/>
 	<input id="test"/>
+	
+	<a id="ccc">fjds</a>
+	
 	<input type="submit"/>
 </form>	
 <script>
@@ -63,13 +66,14 @@ function selectRecord(obj){
 
 <script type="text/javascript"><!--
 
- windowQueryDialogAction("pwin_winDialog_button",{"id":"generated","className":"alphacube","title":"google",
+new WindowQueryDialogAction("pwin_winDialog_button",{"id":"generated","className":"alphacube","title":"google",
 									   "url":"pop.html","top ":"top:0","right":"left:0","width":"500","height":"300",
 									   "maxWidth":"none","maxHeight":"none","minWidth ":"500","minHeight":"300",
 									   "resizable":"true","closable":"true","minimizable":"true","maximizable":"true",
 									   "draggable":"true","showEffectOptions":"none","hideEffectOptions":"none","effectOptions":"none",
 									   "opacity":1,"recenterAuto":"true","gridX":1,"gridY":1,"wiredDrag":"false",
 									   "destroyOnClose":"false","all callbacks":"none"});
+									   
 
 
 // --></script></body>
