调整修改时候的css展示
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3688 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/svn/testSvn.html
+++ b/src/test/resources/corner/svn/testSvn.html
@@ -41,7 +41,7 @@ djConfig = { isDebug: true
 
 <SCRIPT LANGUAGE="JavaScript">
 <!--
-var flags = eval({"entity":{"id":"test01"}});
+var flags = eval({"entity":{"id":"test01",name:"asdf"}});
 var flags2 = eval({"entity":{"id":"test01","name":"中国111"}});
 var type ="show1";
 	
